<resources>
    <string name="app_name">DigitalCupboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="icon">Icon</string>
    <string name="add_category">Add Category</string>
    <string name="category">Category</string>
    <string name="goal">Goal</string>
    <string name="imageofcategory">imageOfCategory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_aquired_date">Item Aquired Date</string>
    <string name="add_item">Add Item</string>
    <string name="take_photo">Take Photo</string>
    <string name="category_name">Category Name</string>
    <string name="settings">Settings</string>
</resources>