<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="gamers.code.digitalcupboard.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_itemAddFragment"
            app:destination="@id/itemAddFragment"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_dashboard_to_categoryAdd"
            app:destination="@id/categoryAdd" />
        <action
            android:id="@+id/action_navigation_dashboard_to_itemCollectionFragment"
            app:destination="@id/itemCollectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="gamers.code.digitalcupboard.ui.login.LoginFragment"
        android:label="Login/Register"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/itemAddFragment"
        android:name="gamers.code.digitalcupboard.ItemAddFragment"
        android:label="@string/add_item"
        tools:layout="@layout/fragment_item_add" />
    <fragment
        android:id="@+id/categoryAdd"
        android:name="gamers.code.digitalcupboard.CategoryAdd"
        android:label="@string/add_category"
        tools:layout="@layout/fragment_category_add" >
        <action
            android:id="@+id/action_categoryAdd_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/categoryAdd"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/itemCollectionFragment"
        android:name="gamers.code.digitalcupboard.ItemCollectionFragment"
        android:label="Item Collection"
        tools:layout="@layout/fragment_item_collection" />
</navigation>